# kv-store

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml  execution.ksis.results  execution.ksis.toml  rm_store.sh  test-exec.ksis.toml
crates/data-gen/: Cargo.toml
crates/data-gen/src/: main.rs
crates/kv/: .gitignore  Cargo.toml  README.md  config.toml
crates/kv-interface/: Cargo.toml
crates/kv-interface/src/: exec.rs  lib.rs  repl.rs
crates/kv-interface/src/binary/: exec.rs  repl.rs
crates/kv-interface/src/interface/: config.rs  dirstore.rs  errors.rs  mod.rs
crates/kv-interface/src/interface/data_structure/: directory.rs  key_type.rs  mod.rs  value.rs
crates/kv-interface/src/ksis/: exec.rs  mod.rs  readme.md
crates/kv-interface/src/ksis/exec/: exec.rs  main.rs  mod.rs
crates/kv-interface/src/ksis/parse/: commands.rs  errors.rs  mod.rs  parse.rs
crates/kv-interface/src/ksis/repl/: main.rs
crates/kv-web-service/: Cargo.toml
crates/kv-web-service/src/: main.rs
crates/kv-web-service/src/service/: advanced.rs  batched.rs  crud.rs  mod.rs  parse.rs  response.rs
crates/kv/benches/: bench.rs
crates/kv/src/: lib.rs
crates/kv/src/batched/: batched_index.rs  batched_write.rs  log_record.rs  mod.rs
crates/kv/src/config/: config.rs
crates/kv/src/definitions/: constants.rs  types.rs
crates/kv/src/errors/: mod.rs
crates/kv/src/index/: iter.rs  mod.rs  traits.rs
crates/kv/src/index/index_impl/: btree.rs  disktree.rs  mod.rs  skiplist.rs
crates/kv/src/io/: file.rs  memmap.rs  mod.rs  traits.rs
crates/kv/src/merge/: merge.rs
crates/kv/src/records/: log_record.rs
crates/kv/src/store/: backup.rs  file_handle.rs  mod.rs  store.rs  utils.rs
crates/kv/src/storelock/: mod.rs  storelock.rs
kv_test/: 0.store  1.store
run/config/: bput.toml  test.toml
run/scripts/: bput.ksis.toml  execution.ksis.toml  test-exec.ksis.toml
