[package]
name = "kv-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5.0"
bytes = "1.7.2"
kv = { path = "../kv" }
kv-interface = { path = "../kv-interface" }
regex = "1.11.0"
