[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[examples]]
name = "usage"
# path = "usage.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
parking_lot = "0.12.3"
log = "0.4"
thiserror = "1.0.64"
bytes = "1.7.2"
anyhow = "1"
crc32fast = "1.4.2"
pretty_env_logger = "0.5.0"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
# toy data for test
english-numbers = "0.3.3"
either = "1.13.0"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"
uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
fslock = "0.2.1"
memmap2 = "0.9.5"
criterion = { version = "0.4", features = ["html_reports"] }
chrono = "0.4.38"
rustyline = "14.0.0"
regex = "1"
